# SimpleBank

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  mypy-ci.ini  pyproject.toml
.github/workflows/: mypy_lint_form_check.yml  tests_check.yml
apps/account/: models.py  serializers.py  services.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_create_system_account.py
apps/account/serializers/: __init__.py  balance_serializers.py  user_serializers.py
apps/account/tests/: test_balance.py  test_health.py  test_login.py  test_registration.py
apps/account/views/: __init__.py  balance_views.py  health_views.py  user_views.py
apps/transaction/: filters.py  models.py  services.py  urls.py
apps/transaction/migrations/: 0001_initial.py  0002_alter_transaction_transaction_type.py  0003_transaction_transaction_id.py  0004_alter_transaction_options_and_more.py  0005_alter_transaction_transaction_type.py  0006_transaction_metadata.py
apps/transaction/serializers/: __init__.py  transaction_serializer.py  transfer_serializer.py
apps/transaction/tests/: test_transaction_list.py  test_transfer.py
apps/transaction/views/: __init__.py  transaction_views.py  transfer_views.py
simplebank/: asgi.py  urls.py  wsgi.py
simplebank/settings/: __init__.py  base.py  prod.py
